// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer: should handle a SET_OFFLINE_STATE action 1`] = `
Immutable.Map {
  "isFetching": false,
  "isOnline": false,
}
`;

exports[`ui reducer: should handle a SET_ONLINE_STATE action 1`] = `
Immutable.Map {
  "isFetching": false,
  "isOnline": true,
}
`;

exports[`ui reducer: should handle a START_FETCHING action 1`] = `
Immutable.Map {
  "isFetching": true,
  "isOnline": false,
}
`;

exports[`ui reducer: should handle a STOP_FETCHING action 1`] = `
Immutable.Map {
  "isFetching": false,
  "isOnline": false,
}
`;

exports[`ui reducer: should return initial state by default 1`] = `
Immutable.Map {
  "isFetching": false,
  "isOnline": false,
}
`;
